--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -23,14 +23,6 @@
         "create_account": "Create account",
         "create_new": "Create A New Account",
         "deactivate_suspicious_proposals": "Hide approve for suspicious proposals",
-        "proposed_transactions": {
-            "advanced_feature": "This is an advanced feature. Please answer the following questions",
-            "question1": "Do you know what a proposal is?",
-            "question2": "Are you expecting a proposal?",
-            "question3": "Are you aware that a proposal can steal your funds or lock you out of the account?",
-            "answered_no": "If your answer to any of the questions above is no, do NOT continue. You can also turn this on and off in Settings.",
-            "show_me_proposals": "Show me Proposals"
-        },
         "deposit": "Deposit BTS",
         "deposit_address": "Your deposit address is your account name",
         "deposit_withdraw": "Deposit/Withdraw",
@@ -68,6 +60,9 @@
         "id": "Account ID",
         "identicon": "Identicon",
         "ignore": "Hide",
+        "inCollateral": "In Collateral",
+        "inOrders": "In Orders",
+        "inVestingBalances": "In Vesting Balances",
         "in_open": "This is the amount of %(asset)s you have in open orders.",
         "in_open_value": "This is the estimated value of the %(asset)s you have in open orders.",
         "intro_text_1": "Your Decentralized Platform",
@@ -75,9 +70,6 @@
         "intro_text_3": "<b>The DEX</b> also enables creation of user-issued assets (UIAs), which can be traded against any other UIAs or trustless assets on the platform.  One well-known issuer on The DEX is <b>OpenLedger</b>, offering a host of assets including BTC, ETH, STEEM, DASH, LTC, DOGE, and many more",
         "intro_text_4": "This gives cryptocurrency traders a unique blend of traditional and decentralized trading, all in a familiar exchange interface. Happy trading!",
         "intro_text_title": "Welcome to %(wallet_name)s",
-        "inOrders": "In Orders",
-        "inCollateral": "In Collateral",
-        "inVestingBalances": "In Vesting Balances",
         "login_with": "Login with",
         "market_actions": "Market actions",
         "market_orders": "Market orders",
@@ -94,32 +86,31 @@
             "days": "days",
             "earned": "Coin days earned",
             "expires": "expires",
+            "fee_allocation": "Fee Allocation",
+            "fee_division": "Fee Division",
             "fee_division_text": {
                 "paragraph_1": "Every time %(account)s pays a transaction fee, that fee is divided among several different accounts. The network takes %(fee_share_network)s%. The Lifetime Member who referred %(account)s takes %(fee_share_ltm)s%.",
                 "paragraph_2": "The registrar is the account that paid the transaction fee to register %(account)s with the network and decide how to divide the remaining %(fee_share_registrar)s% between themselves and their own Affiliate Referrer program. %(account)s's registrar chose to share %(fee_share_affiliate)s% of the total fee with the Affiliate Referrer.",
                 "paragraph_3": "Fee shares, market rewards and other rewards is found on the Vesting Balances page"
             },
-            "fee_pending_text": "Fees paid by %(account)s are divided among the network, referrers, and registrars once every maintenance interval (%(maintenanceInterval)s seconds). The next maintenance time is %(nextMaintenanceTime)s.",
-            "fee_vesting_text": "Most fees are made available immediately, but fees over %(vestingThresholdAmount)s %(vestingThresholdAsset)s (such as those paid to upgrade your membership or register a premium account name) must vest for a total of %(vestingPeriod)s days.",
-            "ref_distribution": "Referral Fee Distribution",
-            "fee_division": "Fee Division",
             "fee_pending": "Pending Fees",
+            "fee_pending_text": "Fees paid by %(account)s are divided among the network, referrers, and registrars once every maintenance interval (%(maintenanceInterval)s seconds). The next maintenance time is %(nextMaintenanceTime)s.",
             "fee_vesting": "Vesting Fees",
-            "referal_fees": "Referral Fee Distribution",
-            "fee_allocation": "Fee Allocation",
+            "fee_vesting_text": "Most fees are made available immediately, but fees over %(vestingThresholdAmount)s %(vestingThresholdAsset)s (such as those paid to upgrade your membership or register a premium account name) must vest for a total of %(vestingPeriod)s days.",
             "fees_cashback": "Fee statistics",
             "fees_paid": "Total fees paid",
             "join": "Joined on",
             "lifetime": "Lifetime member",
-            "lifetime_title": "Earn cashback",
             "lifetime_referrer": "Lifetime Referrer",
+            "lifetime_title": "Earn cashback",
             "membership": "Membership",
             "membership_expiration": "Membership Expiration",
             "network_percentage": "Network",
-            "total_ref": "Total referred %(total)s",
+            "ref_distribution": "Referral Fee Distribution",
+            "referal_fees": "Referral Fee Distribution",
+            "referral_info": "As a lifetime member (LTM) you are eligable for a %(feesCashback)s% cashback on all your fees. You will also recieve cashback from markets with a referral reward. The referral reward is based on your own and your referred members market orders.",
             "referral_link": "Your personal referral link",
             "referral_text": "Give this link to people you want to refer to %(wallet_name)s",
-            "referral_info": "As a lifetime member (LTM) you are eligable for a %(feesCashback)s% cashback on all your fees. You will also recieve cashback from markets with a referral reward. The referral reward is based on your own and your referred members market orders.",
             "referrals": "Referrals",
             "referrer": "Affiliate Referrer",
             "registrar": "Registrar",
@@ -129,6 +120,7 @@
             "stats": "Membership stats",
             "subscribe": "Buy Annual Subscription",
             "suspected_scammer": "Suspected Scammer",
+            "total_ref": "Total referred %(total)s",
             "unknown": "Unknown member",
             "upgrade_lifetime": "Buy Lifetime Subscription",
             "vested": "Vested"
@@ -217,6 +209,14 @@
         "polo_scam": "This account is not the real Poloniex account, please send to this account: poloniexwallet.",
         "portfolio": "Portfolio",
         "propose_from": "Propose From",
+        "proposed_transactions": {
+            "advanced_feature": "This is an advanced feature. Please answer the following questions",
+            "answered_no": "If your answer to any of the questions above is no, do NOT continue. You can also turn this on and off in Settings.",
+            "question1": "Do you know what a proposal is?",
+            "question2": "Are you expecting a proposal?",
+            "question3": "Are you aware that a proposal can steal your funds or lock you out of the account?",
+            "show_me_proposals": "Show me Proposals"
+        },
         "qty": "Qty",
         "quote": "Quote",
         "recent": "Recent activity",
@@ -1250,6 +1250,7 @@
         "exchange": "Exchange",
         "explorer": "Explore",
         "help": "Help",
+        "insight": "Insight",
         "lock": "Log out (lock the local wallet)",
         "lock_short": "Log out",
         "locked_tip": "<br/>Click to login.<br/><br/>Closing the browser window will also log you out.",
@@ -1257,7 +1258,6 @@
         "payments": "Send",
         "payments_legacy": "or Legacy Send",
         "settings": "Settings",
-        "insight": "Insight",
         "showcases": "Spotlight",
         "title": "%(wallet_name)s UI",
         "unlock": "Local Wallet Login",
@@ -1399,15 +1399,16 @@
         "amount": "Amount",
         "date": "Date",
         "invalid_format": "Invoice has invalid format",
+        "invoice_data_found": "Invoice data found",
         "items": "Items",
         "memo": "Memo",
         "note": "Note",
         "paid_by": "Paid by",
         "pay": {
-            "title": "Pay",
             "barcode": "Barcode",
             "invoice_qr_code": "Invoice QR code",
-            "payment_qr_code": "Payment QR code"
+            "payment_qr_code": "Payment QR code",
+            "title": "Pay"
         },
         "pay_button": "Pay %(asset)s to %(name)s",
         "pay_invoice": "Pay Invoice",
@@ -1415,33 +1416,32 @@
         "payment_proof": "Payment proof",
         "payment_request": "Payment request",
         "print_receipt": "Print receipt",
+        "raw_invoice_data": "raw invoice data",
         "receipt_total": "Receipt Total",
         "request": {
-            "title": "Request",
-            "submit": "Submit",
+            "action": "Action",
             "create_invoice_string": "Create invoice string",
+            "currency": "Currency",
             "identifier": "Identifier",
             "identifier_tooltip": "The identifier needs to be used as the memo/message when the request is paid.",
             "items": "Items",
-            "currency": "Currency",
-            "action": "Action",
-            "quantity": "Quantity",
+            "note": "Note",
+            "note_tooltip": "You can attach a note to this payment request, this can be any additional information.",
+            "payment_asset": "Payment Asset",
+            "payment_asset_tooltip": "This payment request will be paid with one transfer, and will be requesting to be paid in the indicated asset.",
             "price": "Price",
+            "quantity": "Quantity",
             "recipient_account": "Recipient Account",
             "recipient_name": "Recipient Name",
             "recipient_name_tooltip": "You can define an arbitrary plaintext name for yourself to indicate who is being paid. Must not be a BitShares account name.",
-            "payment_asset": "Payment Asset",
-            "payment_asset_tooltip": "This payment request will be paid with one transfer, and will be requesting to be paid in the indicated asset.",
-            "note": "Note",
-            "note_tooltip": "You can attach a note to this payment request, this can be any additional information."
+            "submit": "Submit",
+            "title": "Request"
         },
         "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
         "total": "Total",
         "transaction": "Transaction",
         "unit": "Unit",
-        "raw_invoice_data": "raw invoice data",
-        "use_invoice_data": "Use invoice data",
-        "invoice_data_found": "Invoice data found"
+        "use_invoice_data": "Use invoice data"
     },
     "languages": {
         "de": "Deutsch",
@@ -1738,7 +1738,7 @@
         },
         "create_market_modal": {
             "backing_asset": "Backing asset",
-            "commission": "Commission",
+            "commission": "Commission (in %)",
             "condition": "Condition",
             "description": "Description",
             "resolution_date": "Resolution date",
@@ -1746,7 +1746,6 @@
             "symbol": "Symbol",
             "title": "Create prediction market",
             "tooltip_backing_asset": "The backing asset will be used to pay the premium, i.e. it is the leverage that participants use.",
-            "commission": "Commission (in %)",
             "tooltip_commission": "Every participant pays the commission when opposing opinions on the prediction are being matched. On the blockchain, the commission is the market fee of this new asset.",
             "tooltip_condition": "The condition is a statement that can be resolved unambiguous to correct or incorrect at the resolution state.",
             "tooltip_description": "The description gives background information that help the user understand the significance of the prediction.",
@@ -1942,7 +1941,6 @@
         "total": "Total"
     },
     "settings": {
-        "showProposedTx": "Show proposed transactions in dashboard",
         "access": "Nodes",
         "access_text": "",
         "accounts": "Accounts",
@@ -2044,6 +2042,7 @@
         "scrollbars_hide": "Reduce scroll bars",
         "show": "Show",
         "showAssetPercent": "Show asset percentages on the account page",
+        "showProposedTx": "Show proposed transactions in dashboard",
         "showSettles": "Show settle orders in depth chart",
         "skipped": "Skipped",
         "switch": "Switch Node",
@@ -2159,7 +2158,6 @@
             "create": "Create",
             "create_new_mandate": "Create authorization",
             "current_period_expires": "Current period ends",
-            "payer_balance_not_sufficient": "There are not enough funds in the payer's account to claim the full limit amount of {limit}. The limit has been adjusted to reflect the currently available balance!",
             "delete": "Delete",
             "description": "Setup a direct debit authorization for recurring payments. The authorization allows another account to transfer funds out of your account, with a limit on the amount for defined time intervals.",
             "expires": "Expires",
@@ -2167,6 +2165,7 @@
             "limit": "limit",
             "limit_per_period": "Maximum amount per period",
             "num_of_periods": "Number of periods",
+            "payer_balance_not_sufficient": "There are not enough funds in the payer's account to claim the full limit amount of {limit}. The limit has been adjusted to reflect the currently available balance!",
             "period": "Specify period",
             "start_date": "First period starts on",
             "title": "Direct debit",
