--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -60,6 +60,9 @@
         "id": "Идентификатор аккаунта",
         "identicon": "Айдентикон",
         "ignore": "Скрыть",
+        "inCollateral": "In Collateral",
+        "inOrders": "In Orders",
+        "inVestingBalances": "In Vesting Balances",
         "in_open": "Это количество %(asset)s, находящихся в ваших открытых ордерах.",
         "in_open_value": "Это оценочная стоимость %(asset)s, находящихся в ваших открытых ордерах.",
         "intro_text_1": "Ваша децентрализованная платформа",
@@ -84,14 +87,28 @@
             "earned": "Накоплено монето-дней",
             "expires": "Истекает",
             "fee_allocation": "Распределение комиссии",
+            "fee_division": "Fee Division",
+            "fee_division_text": {
+                "paragraph_1": "Every time %(account)s pays a transaction fee, that fee is divided among several different accounts. The network takes %(fee_share_network)s%. The Lifetime Member who referred %(account)s takes %(fee_share_ltm)s%.",
+                "paragraph_2": "The registrar is the account that paid the transaction fee to register %(account)s with the network and decide how to divide the remaining %(fee_share_registrar)s% between themselves and their own Affiliate Referrer program. %(account)s's registrar chose to share %(fee_share_affiliate)s% of the total fee with the Affiliate Referrer.",
+                "paragraph_3": "Fee shares, market rewards and other rewards is found on the Vesting Balances page"
+            },
+            "fee_pending": "Pending Fees",
+            "fee_pending_text": "Fees paid by %(account)s are divided among the network, referrers, and registrars once every maintenance interval (%(maintenanceInterval)s seconds). The next maintenance time is %(nextMaintenanceTime)s.",
+            "fee_vesting": "Vesting Fees",
+            "fee_vesting_text": "Most fees are made available immediately, but fees over %(vestingThresholdAmount)s %(vestingThresholdAsset)s (such as those paid to upgrade your membership or register a premium account name) must vest for a total of %(vestingPeriod)s days.",
             "fees_cashback": "Статистика выплат",
             "fees_paid": "Всего выплачено комиссий",
             "join": "Присоединился ",
             "lifetime": "Пожизненный член",
             "lifetime_referrer": "Пожизненный реферер",
+            "lifetime_title": "Earn cashback",
             "membership": "Членство",
             "membership_expiration": "Окончание членства",
             "network_percentage": "Сеть",
+            "ref_distribution": "Referral Fee Distribution",
+            "referal_fees": "Referral Fee Distribution",
+            "referral_info": "As a lifetime member (LTM) you are eligable for a %(feesCashback)s% cashback on all your fees. You will also recieve cashback from markets with a referral reward. The referral reward is based on your own and your referred members market orders.",
             "referral_link": "Ваша реферальная ссылка",
             "referral_text": "Дайте эту ссылку людям, которых вы хотите пригласить в %(wallet_name)s",
             "referrals": "Рефералы",
@@ -103,6 +120,7 @@
             "stats": "Статистика членства",
             "subscribe": "Купить годовую подписку",
             "suspected_scammer": "Предполагаемый мошенник",
+            "total_ref": "Total referred %(total)s",
             "unknown": "Неизвестный пользователь",
             "upgrade_lifetime": "Купить пожизненную подписку",
             "vested": "В вестинге"
@@ -191,6 +209,14 @@
         "polo_scam": "Этот аккаунт не является реальным аккаунтом Poloniex, пожалуйста, отправляйте на этот аккаунт: poloniexwallet.",
         "portfolio": "Портфель",
         "propose_from": "Предложить от",
+        "proposed_transactions": {
+            "advanced_feature": "This is an advanced feature. Please answer the following questions",
+            "answered_no": "If your answer to any of the questions above is no, do NOT continue. You can also turn this on and off in Settings.",
+            "question1": "Do you know what a proposal is?",
+            "question2": "Are you expecting a proposal?",
+            "question3": "Are you aware that a proposal can steal your funds or lock you out of the account?",
+            "show_me_proposals": "Show me Proposals"
+        },
         "qty": "Кол-во",
         "quote": "Тикер",
         "recent": "Последние действия",
@@ -518,7 +544,8 @@
         "top_markets": "Лучшие рынки"
     },
     "errors": {
-        "loading_from_blockchain": "Error fetching form the blockchain, please retry."
+        "loading_from_blockchain": "Error fetching form the blockchain, please retry.",
+        "loading_from_es": "Error fetching from elastic search database."
     },
     "exchange": {
         "actions": "Actions",
@@ -1223,6 +1250,7 @@
         "exchange": "Биржа",
         "explorer": "Обозреватель",
         "help": "Помощь",
+        "insight": "Insight",
         "lock": "Выйти (заблокировать локальный кошелек)",
         "lock_short": "Выйти",
         "locked_tip": "<br/>Нажмите, чтобы войти.<br/><br/>Закрыв окно браузера, вы также выйдете из аккаунта.",
@@ -1371,22 +1399,49 @@
         "amount": "Amount",
         "date": "Date",
         "invalid_format": "Invoice has invalid format",
+        "invoice_data_found": "Invoice data found",
         "items": "Items",
         "memo": "Memo",
         "note": "Note",
         "paid_by": "Paid by",
+        "pay": {
+            "barcode": "Barcode",
+            "invoice_qr_code": "Invoice QR code",
+            "payment_qr_code": "Payment QR code",
+            "title": "Pay"
+        },
         "pay_button": "Pay %(asset)s to %(name)s",
         "pay_invoice": "Pay Invoice",
         "pay_to": "Pay To",
         "payment_proof": "Payment proof",
         "payment_request": "Payment request",
         "print_receipt": "Print receipt",
+        "raw_invoice_data": "raw invoice data",
         "receipt_total": "Receipt Total",
-        "recipient_name": "Recipient Name",
+        "request": {
+            "action": "Action",
+            "create_invoice_string": "Create invoice string",
+            "currency": "Currency",
+            "identifier": "Identifier",
+            "identifier_tooltip": "The identifier needs to be used as the memo/message when the request is paid.",
+            "items": "Items",
+            "note": "Note",
+            "note_tooltip": "You can attach a note to this payment request, this can be any additional information.",
+            "payment_asset": "Payment Asset",
+            "payment_asset_tooltip": "This payment request will be paid with one transfer, and will be requesting to be paid in the indicated asset.",
+            "price": "Price",
+            "quantity": "Quantity",
+            "recipient_account": "Recipient Account",
+            "recipient_name": "Recipient Name",
+            "recipient_name_tooltip": "You can define an arbitrary plaintext name for yourself to indicate who is being paid. Must not be a BitShares account name.",
+            "submit": "Submit",
+            "title": "Request"
+        },
         "tooltip_payment_proof": "Your account history has been searched for a match of sender, recipient and asset. This is an educated guess, but there is no direct link between this transfer and the shown invoice written on-chain.",
         "total": "Total",
         "transaction": "Transaction",
-        "unit": "Unit"
+        "unit": "Unit",
+        "use_invoice_data": "Use invoice data"
     },
     "languages": {
         "de": "Deutsch",
@@ -1886,7 +1941,6 @@
         "total": "Всего"
     },
     "settings": {
-        "showProposedTx": "Показывать предложенные транзакции",
         "access": "Узлы",
         "access_text": "",
         "accounts": "Аккаунты",
@@ -1988,6 +2042,7 @@
         "scrollbars_hide": "Сократить полосы прокрутки",
         "show": "Показать",
         "showAssetPercent": "Показать процентное соотношение активов на странице аккаунтов",
+        "showProposedTx": "Показывать предложенные транзакции",
         "showSettles": "Показать ордера на погашение на графике глубины",
         "skipped": "Пропущенные",
         "switch": "Сменить узел",
@@ -2110,6 +2165,7 @@
             "limit": "лимит",
             "limit_per_period": "Максимальная сумма за период",
             "num_of_periods": "Количество периодов",
+            "payer_balance_not_sufficient": "There are not enough funds in the payer's account to claim the full limit amount of {limit}. The limit has been adjusted to reflect the currently available balance!",
             "period": "Укажите определённый период",
             "start_date": "Первый период начнётся ",
             "title": "Прямой дебет",
@@ -2163,6 +2219,10 @@
                 "preimage_random": "Наиболее секретный выбор – это случайная строка. Если ваш секрет может быть угадан или слишком короток, вы рискуете потерять свои средства. Используйте кнопку копирования в этой строке, чтобы сохранить прообраз и алгоритм хеширования.",
                 "preimage_size": "Размер прообраза – это длина указанного выше прообраза. Это значение также будет записано в блокчейн. Используйте кнопку копирования в этой строке, чтобы сохранить хеш и размер прообраза."
             }
+        },
+        "merchant_protocol": {
+            "description": "Create, view and pay remittance requests or invoices",
+            "title": "Merchant Protocol"
         },
         "paper_wallet": {
             "description": "Создайте PDF-файл с напечатанными ключами вашего аккаунта (простой текст и штрих-код). Если кошелек разблокирован, в файл также добавляются приватные ключи.",
@@ -2356,6 +2416,7 @@
         "fund_pool": "пополнил пул комиссий %(asset)s на",
         "funding_account": "Аккаунт финансирования",
         "global_parameters_update": "Обновил глобальные параметры",
+        "hide": "Hide",
         "inputs": "Входы",
         "market_fee": "Рыночная комиссия",
         "max_market_fee": "Максимальная рыночная комиссия",
@@ -2371,6 +2432,7 @@
         "seller": "Продавец",
         "sent": "отправлена",
         "settlement_date": "Дата погашения",
+        "show_more": "Show more",
         "to": "кому",
         "transaction_confirmed": "Транзакция подтверждена",
         "trxTypes": {
@@ -2504,8 +2566,10 @@
         "asset_select_placeholder": "Выберите актив",
         "total_x_assets": "Всего %(count)s активов",
         "total_x_items": "Всего %(count)s позиций",
+        "total_x_items_y_hidden": "Total of %(totelCount)s items loaded, %(count)s of those shown in pagination",
         "total_x_markets": "Всего %(count)s рынков",
-        "total_x_operations": "Всего %(count)s операций"
+        "total_x_operations": "Всего %(count)s операций",
+        "x_assets_hidden": "%(count)s of %(total)s assets filtered out"
     },
     "validation": {
         "messages": {
