--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1615,10 +1615,10 @@
         "backUpRestoreKey": "Back up and restore Account",
         "checkboxRecover": "I understand that no one can recover my password or .bin file if I forget or lose it.",
         "checkboxRemember": "I have remembered or otherwise stored my password and I safely kept downloaded .bin file.",
-        "checkboxUploaded": "I understand that .bin file must be uploaded during the login process and without .bin file I will lose access to my funds.",
+        "checkboxUploaded": "I understand that .bin file must be used during the login process and without .bin file I will lose access to my funds.",
         "continue": "Continue",
         "copyPassword": "Copy your password to save.",
-        "createAccountTitle": "Create Account by Bin-file",
+        "createAccountTitle": "Create Account by .bin-file",
         "createByPassword": "Create Account by Name and Password",
         "downloadFile": "Download file",
         "loginByKey": "Login by",
@@ -1629,11 +1629,11 @@
         "securityWalletModel": "High",
         "select": "Select",
         "title": "Registration",
-        "walletDescription": "A bin-file will be automatically created. Please download it and keep in a safe place. You’ll need to upload this file to login to your account in the future.",
-        "walletLoginByValue": "Bin-file + Password",
-        "walletModelTitle": "By bin-file",
+        "walletDescription": "A .bin-file will be automatically created. Please download it and keep in a safe place. You’ll need to use this file to login to your account in the future.",
+        "walletLoginByValue": ".bin-file + Password",
+        "walletModelTitle": "By .bin-file",
         "walletNote": "Please keep in mind, that BitShares doesn't store users passwords and couldn't recover users accounts after password loss.",
-        "whyBinFile": "Why do I need a .bin file?"
+        "whyBinFile": "Why do I need a .bin-file?"
     },
     "scaled_orders": {
         "action": {
@@ -1675,7 +1675,7 @@
         "automatic_short": "Automatic Switching",
         "available_nodes": "Available",
         "backup": "Backup",
-        "backup_backup": "Restore from a backup file (.bin)",
+        "backup_backup": "Restore from a backup .bin-file",
         "backup_backup_short": "Restore from a backup",
         "backup_brainkey": "Restore using a local wallet brainkey",
         "backup_favorites": "Restore favorites using a json file",
@@ -1984,7 +1984,7 @@
             "accountName": "Account name must contain from 4 to 63 characters and must consist of latin letters, dashes, digits.",
             "password": "Password must contain at least 8 characters. It would be better to use a complicated password containing a combination of numbers, special characters and letters.",
             "walletModel": "The local wallet has the best security, but is restricted to your current browser and computer. To migrate the wallet to another browser or computer, you may use the backup file or brainkey.",
-            "whyBinFile": ".bin file - is a backup file. File is encrypted with your password, and contains all the private keys for your accounts. This file must be uploaded during the login process."
+            "whyBinFile": ".bin-file - is a backup file. File is encrypted with your password, and contains all the private keys for your accounts. This file must be used during the login process."
         },
         "required_input": "Field requires a valid %(type)s",
         "scam_account": "Account is suspected scammer",
@@ -2302,7 +2302,7 @@
         "ask_to_select_wallet": "Please select a key file",
         "back": "Back",
         "backup_brainkey": "Backup Brainkey",
-        "backup_explain": "Clicking on the button below will generate a backup file with a .bin extension. This file is encrypted with your wallet password, and contains all the private keys for your accounts. It can be used to restore your wallet, or move it to a different computer/browser.",
+        "backup_explain": "Clicking on the button below will generate a .bin-file. This file is encrypted with your wallet password, and contains all the private keys for your accounts. It can be used to restore your wallet, or move it to a different computer/browser.",
         "backup_login": "Backup & login",
         "backup_new_account": "Congratulations, you've just created a new account on the %(wallet_name)s exchange powered by the BitShares blockchain! It is strongly recommended that you make a backup of your wallet now. Without a backup there is no way to restore your account if something happens to your computer.",
         "backup_warning": "It appears that your private key files are not backed up. For security reasons we recommend users do not log in without backing up their private keys.",
@@ -2367,7 +2367,7 @@
         "has_wallet": "When you create your first %(wallet_name)s account, a %(wallet_name)s local wallet will be automatically created as well and stored in your browser. This local wallet is encrypted with your password, and will contain any private keys belonging to your accounts. It is important that you take the time to backup this wallet once created!",
         "import_20_notice1": "Import your BTS 2.0+ BACKUP first",
         "import_20_notice2": "(if you have one)",
-        "import_backup": "Import %(wallet_name)s 2.0 backup (.bin file)",
+        "import_backup": "Import %(wallet_name)s 2.0 backup (.bin-file)",
         "import_backup_choose": "Please select your backup file in the dialog below. This is completely safe as the file is not uploaded anywhere and never leaves your browser.",
         "import_balance": "Import balance(s)",
         "import_bts": "Import a BTS 0.9.3c key export",
@@ -2380,7 +2380,7 @@
         "import_private_key": "Import a private key",
         "invalid_format": "Invalid Format",
         "key_file": "Key file",
-        "key_file_bin": "Key file (.bin)",
+        "key_file_bin": "Key file or .bin-file",
         "last_backup": "Last backup",
         "link_account": "Account",
         "link_deposit": "Deposits",
